2004-12-20  Katsumi Yamaoka  <yamaoka@jpl.org>

	* gnus-agent.el (gnus-agent-group-path): Decode group name.
	(gnus-agent-group-pathname): Ditto.

	* gnus-cache.el (gnus-cache-file-name): Decode group name.

	* gnus-group.el (gnus-group-make-group): Decode group name.
	(gnus-group-make-rss-group): Register the group data after opening
	the nnrss group.

2004-12-17  Paul Jarc  <prj@po.cwru.edu>

	* nnmaildir.el (nnmaildir-request-expire-articles): Articles moved
	by expiry now get marked as read.

2004-12-17  Katsumi Yamaoka  <yamaoka@jpl.org>

	* mm-util.el (mm-xemacs-find-mime-charset): New macro.

2004-12-17  Aidan Kehoe  <kehoea@parhasard.net>

	* mm-util.el (mm-xemacs-find-mime-charset-1): New function used to
	unify Latin characters in XEmacs.
	(mm-find-mime-charset-region): Use it.

2004-12-17  Katsumi Yamaoka  <yamaoka@jpl.org>

	* gnus-util.el (gnus-delete-directory): New function.

	* gnus-agent.el (gnus-agent-delete-group): Use it.

	* gnus-cache.el (gnus-cache-delete-group): Use it.

2004-12-16  Katsumi Yamaoka  <yamaoka@jpl.org>

	* gnus-group.el (gnus-group-make-rss-group): Unify non-ASCII group
	names.

2004-12-16  Simon Josefsson  <jas@extundo.com>

	* hashcash.el (hashcash-payment-alist): Fix custom :type.

2004-12-15  Katsumi Yamaoka  <yamaoka@jpl.org>

	* mm-url.el (mm-url-predefined-programs): Add --silent arg to curl.

	* gnus-group.el (gnus-group-expire-articles-1): Decode group name.
	(gnus-group-set-current-level): Decode group name.

2004-12-15  Maciek Pasternacki  <maciekp@japhy.fnord.org>  (tiny change)

	* nnrss.el (nnrss-fetch): Signal an error if w3-parse-buffer also
	failed.

2004-12-14  Katsumi Yamaoka  <yamaoka@jpl.org>

	* gnus-group.el (gnus-group-delete-group): Decode group name.
	(gnus-group-make-rss-group): Encode group name.
	(gnus-group-catchup-current): Decode group name.
	(gnus-group-kill-group): Decode group name.

2004-12-08  Stefan Monnier  <monnier@iro.umontreal.ca>
